tests/machine/x/java/cast_struct.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:40:25Z
// cast_struct.mochi
import java.util.*;

class Todo {
    String title;
    Todo(String title) {
        this.title = title;
    }
    @Override public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof Todo other)) return false;
        return Objects.equals(this.title, other.title);
    }
    @Override public int hashCode() {
        return Objects.hash(title);
    }
}
class Title {
    String title;
    Title(String title) {
        this.title = title;
    }
    @Override public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof Title other)) return false;
        return Objects.equals(this.title, other.title);
    }
    @Override public int hashCode() {
        return Objects.hash(title);
    }
    int size() { return 1; }
}
public class CastStruct {
    public static void main(String[] args) {
    Object todo = (Object)new Title("hi");
    System.out.println(((Map<?,?>)todo).get("title"));
    }
}
